Fixed wrapping issues with the banner and nav linx.

--- a/public/css/character.css
+++ b/public/css/character.css
@@ -13,9 +13,9 @@
     justify-content: flex-start
 }
 
-#bannercontainer {
-    margin-left: 15vw;
-}
+/* #bannercontainer {
+    margin-left: 18vw;
+} */
 
 #homelink {
     font-size: 4em;
